src/test/resources/bad/symbol/ClassDeclaration.java
class ClassDeclarationTest {
    public static void main(String[] args) {
    }
}
class A {}
class A {} // DUPLICATE_CLASS
